--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,16 @@ input:hover, input:focus {
   padding: 140px 0px;
 }
 
+.video-container {
+  aspect-ratio: 16/9;
+  width: 100%;
+  height: auto;
+  padding-left: 50%;
+  padding-right: 50%;
+  padding-top: 25%;
+  padding-bottom: 25%;
+}
+
 @media only screen and (min-width: 992px) and (max-width: 1200px) {
   /* line 18, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_common.scss */
   .section_padding {
@@ -78,7 +88,8 @@ input:hover, input:focus {
 @media (max-width: 576px) {
   /* line 18, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_common.scss */
   .section_padding {
-    padding: 70px 0px;
+    padding: 30px 0px;
+    padding-left: 30%;
   }
 }
 
@@ -2459,7 +2470,7 @@ ul {
   /* line 265, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_menu.scss */
   .navbar-brand img {
     max-width: 100px;
-    width: 20%;
+    width: 100%;
   }
   /* line 269, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_menu.scss */
   .navbar-light .navbar-toggler {
