--- a/css/style.css
+++ b/css/style.css
@@ -61,21 +61,27 @@ input:hover, input:focus {
   padding: 140px 0px;
 }
 
-  .video-container {
+.video-container {
     position: absolute;
     width: 100%;
     padding-bottom: 56.25%;
     height: 0;
     overflow: hidden;
+    margin-top: 5%;
+    margin-bottom: 5%;
   }
 
-  .video-container iframe, 
-  .video-container embed {
+.video-container iframe, 
+.video-container embed {
     position: absolute;
     top: 0;
     left: 0;
     width: 70%;
     height: 70%;
+  }
+
+  .contact-form-padding{
+    margin: 10%;
   }
 
 @media only screen and (max-width: 600px) { 
@@ -95,6 +101,11 @@ input:hover, input:focus {
     left: 0;
     width: 100%;
     height: 100%;
+  }
+
+  .embed-video{
+    width: 90%;
+    height: auto;
   }
 }
 
@@ -6268,6 +6279,9 @@ h1, h2, h3, h4, h5, h6 {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  width: 100vw;
+  height: 20vw;
+  overflow: hidden;
   
 }
 @media only screen and (max-width: 600) {
@@ -6280,12 +6294,14 @@ h1, h2, h3, h4, h5, h6 {
 /* line 5, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_breadcrumb.scss */
 .breadcrumb {
   position: relative;
+  
   z-index: 1;
   text-align: center;
 }
 
 /* line 10, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_breadcrumb.scss */
 .breadcrumb .breadcrumb_iner {
+  
   height: 475px;
   width: 100%;
   display: table;
@@ -6293,6 +6309,10 @@ h1, h2, h3, h4, h5, h6 {
 
 /* line 14, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_breadcrumb.scss */
 .breadcrumb .breadcrumb_iner .breadcrumb_iner_item {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: table-cell;
   vertical-align: middle;
 }
@@ -6300,7 +6320,7 @@ h1, h2, h3, h4, h5, h6 {
 /* line 17, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_breadcrumb.scss */
 .breadcrumb .breadcrumb_iner .breadcrumb_iner_item h2 {
   color: #fff;
-  font-size: 90px;
+  font-size: 100vw 20vh;
   font-weight: 500;
   margin-bottom: 10px;
   text-transform: capitalize;
@@ -6309,14 +6329,14 @@ h1, h2, h3, h4, h5, h6 {
 @media (max-width: 576px) {
   /* line 17, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_breadcrumb.scss */
   .breadcrumb .breadcrumb_iner .breadcrumb_iner_item h2 {
-    font-size: 35px;
+    font-size: .5vw .5vh;
   }
 }
 
 @media only screen and (min-width: 576px) and (max-width: 767px) {
   /* line 17, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_breadcrumb.scss */
   .breadcrumb .breadcrumb_iner .breadcrumb_iner_item h2 {
-    font-size: 35px;
+    font-size: 1.2vw 1.2vh;
   }
 }
 
