--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,127 @@ body {
   font-size: 14px;
 }
 
+.homepage_body{
+    position: relative, absolute;
+  background-image: url(../pictures/chuck_moji_world.png);
+   background-repeat: no-repeat;
+  background-size: 100% auto;
+  background-position: center;
+}
+
+/* line 8, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_banner.scss */
+.homepage_body .banner_text {
+  display: table;
+  width: 100%;
+  height: 1020px;
+}
+
+/* line 12, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_banner.scss */
+.homepage_body .banner_text .banner_text_iner {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+@media (max-width: 991px) {
+  /* line 8, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_banner.scss */
+  .homepage_body .banner_text {
+    height: 650px;
+    text-size-adjust: 100% auto;
+    text-align: auto;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+  /* line 8, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_banner.scss */
+  .homepage_body .banner_text {
+    height: 650px;
+  }
+}
+
+/* line 22, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_banner.scss */
+.homepage_body .banner_text h1 {
+  font-size: 60px;
+  text-transform: capitalize;
+  font-weight: 700;
+  margin-bottom: 32px;
+  line-height: 70px;
+  color: #1a6cca;
+}
+
+@media (max-width: 576px) {
+  /* line 22, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_banner.scss */
+  .homepage_body .banner_text h1 {
+    font-size: 25px;
+    margin-bottom: 15px;
+    line-height: 1.3;
+
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  /* line 22, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_banner.scss */
+  .homepage_body .banner_text h1 {
+    font-size: 30px;
+    margin-bottom: 15px;
+    line-height: 1.3;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  /* line 22, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_banner.scss */
+  .homepage_body .banner_text h1 {
+    font-size: 40px;
+    margin-bottom: 15px;
+    line-height: 1.3;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+  /* line 22, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_banner.scss */
+  .homepage_body .banner_text h1 {
+    font-size: 40px;
+    margin-bottom: 15px;
+    line-height: 1.4;
+  }
+}
+
+/* line 49, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_banner.scss */
+.homepage_body .banner_text h1 span {
+  color: #ff0000;
+}
+
+/* line 53, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_banner.scss */
+.homepage_body .banner_text p {
+  font-size: 15px;
+  line-height: 1.8;
+  font-family: "Poppins", sans-serif;
+  color: #000000;
+  margin-bottom: 45px;
+  padding-right: 140px;
+}
+
+@media (max-width: 991px) {
+  /* line 53, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_banner.scss */
+  .homepage_body .banner_text p {
+    padding-right: 0;
+    margin-bottom: 10px;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+  /* line 53, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_banner.scss */
+  .homepage_body .banner_text p {
+    padding-right: 0;
+  }
+}
+
+@media (max-width: 991px) {
+  /* line 68, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_banner.scss */
+  .homepage_body .banner_text .btn_1 {
+    margin-top: 30px;
+  }
+}
+
 /* line 9, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_common.scss */
 .message_submit_form:focus {
   outline: none;
@@ -99,8 +220,8 @@ input:hover, input:focus {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: 50%;
   }
 
   .embed-video{
@@ -651,7 +772,8 @@ ul {
 
 /* line 247, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_common.scss */
 .body_bg {
-  background-image: url('../img/body_bg.png');
+  /*background-image: url('../img/body_bg.png');*/
+  background-color: navy;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -661,6 +783,7 @@ ul {
 /* line 251, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_common.scss */
 .black .footer_top {
   padding: 65px 0 100px !important;
+  background-color: black;
 }
 
 @media (max-width: 991px) {
@@ -4346,8 +4469,8 @@ ul {
 /* line 3, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_footer.scss */
 .footer_part .footer_top {
   /*padding: 140px 0 100px;*/
-  padding-left: 15%; 
-  padding-right: 15%;
+  background-color: black;
+  padding: 5%;
 }
 
 @media (max-width: 576px) {
@@ -4374,6 +4497,7 @@ ul {
 /* line 17, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_footer.scss */
 .footer_part img {
   margin-bottom: 35px;
+  align-self: center;
 }
 
 @media (max-width: 576px) {
