create new javascript file and added new image file to repo. updated homepage, the games page, the page for Da Streetz and Moji World has also been updated.

--- a/css/style.css
+++ b/css/style.css
@@ -2878,7 +2878,7 @@ ul {
 /* line 2, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_banner.scss */
 .banner_part {
   position: relative, absolute;
-  background-image: url(../pictures/k_d_bg.png);/*("\\Users\munnu\Desktop\Catalyte Dev\munnuo_website\pictures\keith_delora_bg.png");/**/
+  background-image: url(../pictures/chuck_moji_world.png);/*("\\Users\munnu\Desktop\Catalyte Dev\munnuo_website\pictures\keith_delora_bg.png");/**/
   background-repeat: no-repeat;
   background-size: 100% auto;
   background-position: center;
