--- a/css/style.css
+++ b/css/style.css
@@ -430,22 +430,54 @@ a:hover {
   text-decoration: none;
 }
 
+.universe{
+
+  margin: 1em;
+  iframe{
+    display: flex;
+    justify-content: center;
+    max-width: 80%;
+    height: 50vw;
+  }
+
+  h2{
+  }
+
+  p{
+
+  }
+}
+
+
 .team{
-  align-items: center;
-  margin: 3vw;
+  margin: 1vw;
   text-align: center;
 
   img {
-    width: 40vw;
-    height: 25vh;
+    max-width: 100%;
+    height: auto;
     object-fit: contain;
   }
 
   p {
+    max-width: 100%;
+    height: auto;
+    color: black;
     margin-top: 5%;
+    font-size: 1em;
+    font-size-adjust: initial;
+  }
+
+  h1{
+    font-size: 2rem;
+  }
+
+  h4{
+    font-size: 1em;
   }
 
   ul {
+    background-image: url("../img/gallery_bg.png");
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -454,7 +486,9 @@ a:hover {
   li {
     display: inline-block; /* or display: inline; */
     /* Add padding or margin for spacing between items if desired */
-    padding: 10px;
+    padding: px;
+    max-width: 30%;
+    max-height: 30%;
   }
 }
 
@@ -463,8 +497,6 @@ a:hover {
   color: white;
   width: 100%;
 }
-
-
 
 .gallery_bg{
   background-image: url("../img/gallery_bg.png");
@@ -2881,14 +2913,17 @@ ul {
   background-image: url(../pictures/chuck_moji_world.png);/*("\\Users\munnu\Desktop\Catalyte Dev\munnuo_website\pictures\keith_delora_bg.png");/**/
   background-repeat: no-repeat;
   background-size: 100% auto;
-  background-position: center;
+  background-position: center top;
+
+  max-width: 100vw;
+  height: 50vw;
 }
 
 /* line 8, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_banner.scss */
 .banner_part .banner_text {
   display: table;
   width: 100%;
-  height: 1020px;
+  height: 540em;
 }
 
 /* line 12, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_banner.scss */
