--- a/css/style.css
+++ b/css/style.css
@@ -42,10 +42,10 @@ body {
 }
 
 .homepage_body{
-    position: relative, absolute;
+  position: relative, top;
   background-image: url(../pictures/chuck_moji_world.png);
-   background-repeat: no-repeat;
-  background-size: 100% auto;
+  background-repeat: no-repeat;
+  background-size: auto;
   background-position: center;
 }
 
@@ -53,7 +53,7 @@ body {
 .homepage_body .banner_text {
   display: table;
   width: 100%;
-  height: 1020px;
+  height: 650px;
 }
 
 /* line 12, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_banner.scss */
@@ -86,6 +86,7 @@ body {
   margin-bottom: 32px;
   line-height: 70px;
   color: #1a6cca;
+  height: 650px;
 }
 
 @media (max-width: 576px) {
@@ -94,7 +95,7 @@ body {
     font-size: 25px;
     margin-bottom: 15px;
     line-height: 1.3;
-
+    height: 650px;
   }
 }
 
@@ -104,6 +105,7 @@ body {
     font-size: 30px;
     margin-bottom: 15px;
     line-height: 1.3;
+    height: 650px;
   }
 }
 
@@ -113,6 +115,7 @@ body {
     font-size: 40px;
     margin-bottom: 15px;
     line-height: 1.3;
+    height: 650px;
   }
 }
 
@@ -122,6 +125,7 @@ body {
     font-size: 40px;
     margin-bottom: 15px;
     line-height: 1.4;
+    height: 650px;
   }
 }
 
@@ -145,6 +149,7 @@ body {
   .homepage_body .banner_text p {
     padding-right: 0;
     margin-bottom: 10px;
+    height: 650px;
   }
 }
 
@@ -802,14 +807,26 @@ ul {
   }
 }
 
+html, body{
+  margin: 0;
+  padding: 0;
+}
+
 /* line 247, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_common.scss */
 .body_bg {
   /*background-image: url('../img/body_bg.png');*/
   background-color: navy;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
   width: 100%;
+  height: 100%;
+  max-height: fit-content;
+
+
+    margin: 0;
+    padding: 0;
+
+  
 }
 
 /* line 251, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_common.scss */
@@ -4505,7 +4522,8 @@ ul {
 .footer_part .footer_top {
   /*padding: 140px 0 100px;*/
   background-color: black;
-  padding: 5%;
+  position: relative;
+  bottom: auto;
 }
 
 @media (max-width: 576px) {
