--- a/css/style_ds.css
+++ b/css/style_ds.css
@@ -83,6 +83,7 @@ html {
       padding: 0.8rem 1.5rem;
       margin: 0.5rem;
       font-size: 1rem;
+      border-radius: 7.5px;
       background: #c90808;
       color: #fff;
       border: none;
